--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ iframe {
     }
 
     section:nth-of-type(3) {
-      background-image: url("/SK_Images/Travel\ website\ 06.jpg");
+      background-image: url("./SK_Images/Travel\ website\ 06.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       display: flex;
