--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ iframe {
     }
 
     section:nth-of-type(5) {
-    /* height: 300vh !important; */
+      height: 300vh !important;
     }
 
     section:nth-of-type(5)  .down-link{
