--- a/style.css
+++ b/style.css
@@ -776,8 +776,8 @@ iframe {
       .pseudo-section:nth-of-type(3) {
         background-image: none;
         background-color: white;
-        min-height: auto;
-        height: 300vh;
+        min-height: 300vh;
+        height: auto;
         padding-top: 120px;
         padding-bottom: 60px;
       }
