--- a/style.css
+++ b/style.css
@@ -720,7 +720,8 @@ iframe {
         background-image: none;
         background-color: white;
         overflow-y: scroll;
-        height: auto;
+        min-height: auto;
+
       }
 
       section:nth-of-type(5) .down-link{
@@ -776,8 +777,7 @@ iframe {
       .pseudo-section:nth-of-type(3) {
         background-image: none;
         background-color: white;
-        min-height: 300vh;
-        height: auto;
+        min-height: 100vh;
         padding-top: 120px;
         padding-bottom: 60px;
       }
