Peter and Adams Corections

--- a/menu.css
+++ b/menu.css
@@ -4,7 +4,27 @@ header {
     width: 100%; /* Full width */
     z-index: 5;
     padding: 25px 25px 15px 25px;
-    background-image: linear-gradient(black, rgba(255, 255, 255, 0));
+    background: linear-gradient(to bottom, black, cubic-bezier(0.48, 0.3, 0.64, 1), transparent);
+  /* => */
+  background: linear-gradient(
+    to bottom,
+    hsl(0, 0%, 0%),
+    hsla(0, 0%, 0%, 0.94505) 7.9%,
+    hsla(0, 0%, 0%, 0.88294) 15.3%,
+    hsla(0, 0%, 0%, 0.81522) 22.2%,
+    hsla(0, 0%, 0%, 0.7426) 28.7%,
+    hsla(0, 0%, 0%, 0.66692) 34.8%,
+    hsla(0, 0%, 0%, 0.58891) 40.6%,
+    hsla(0, 0%, 0%, 0.50925) 46.2%,
+    hsla(0, 0%, 0%, 0.42866) 51.7%,
+    hsla(0, 0%, 0%, 0.34817) 57.2%,
+    hsla(0, 0%, 0%, 0.2693) 62.8%,
+    hsla(0, 0%, 0%, 0.19309) 68.7%,
+    hsla(0, 0%, 0%, 0.12126) 75.2%,
+    hsla(0, 0%, 0%, 0.05882) 82.6%,
+    hsla(0, 0%, 0%, 0.01457) 91.2%,
+    hsla(0, 0%, 0%, 0)
+  );
 }
 
 header nav {
@@ -70,13 +90,23 @@ header .menu-content {
   width: 100%;
   height: 100vh;
   padding: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
   margin: 0 auto;
   position: relative;
   z-index: 15;
+}
+
+header .menu-content p {
+  position: absolute;
+      z-index: 2;
+      bottom: 30px;
+      color: white;
+      font-size: 20px;
+      width: 100%;
+      font-family: 'Caslon Doric';
+      font-weight: 300;
+      text-align: center;
+      text-decoration: none;
+      letter-spacing: 3px; 
 }
 
 header .menu-links {
@@ -85,14 +115,14 @@ header .menu-links {
   background-position: center;
   opacity: 100%;; 
   font-family: 'Caslon Doric';
-  font-weight: 300;
+  font-weight: 100;
   width: 100%;
   height: 100vh;
   padding: 0 10%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
 position: relative;
 }
@@ -107,10 +137,13 @@ position: relative;
 
 header .menu-btn a {
   text-decoration: none;
-  font-size: 2.5vw;
+  font-size: 2vw;
   color: #ffffff;
   display: block;
   transition: 0;
+  letter-spacing: 3px; 
+  margin: 0 25px;
+  text-align: center;
 }
 
 header a {
