--- a/style.css
+++ b/style.css
@@ -152,17 +152,33 @@ iframe {
     }
     
     /* Hide the images by default */
-    .mySlides {
+    .mySlides1 {
       opacity: 0;
       transition: opacity 0.25s;
       position: absolute;
     }
 
-    .mySlides.active {
+    .mySlides1.active {
       opacity: 1;
     }
 
-    .mySlides img {
+    .mySlides1 img {
+        min-height: 100vh;
+        object-fit: cover;
+        object-position: 50% 50%;
+    }
+
+    .mySlides2 {
+      opacity: 0;
+      transition: opacity 0.25s;
+      position: absolute;
+    }
+
+    .mySlides2.active {
+      opacity: 1;
+    }
+
+    .mySlides2 img {
         min-height: 100vh;
         object-fit: cover;
         object-position: 50% 50%;
@@ -366,6 +382,10 @@ iframe {
       width: 100%;
     }
 
+    .pseudo-section {
+      padding: 25px;
+    }
+
     .pseudo-section:first-of-type {
       background-image: url("https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639572967/Travel_website_06_rldksz.jpg");
       background-repeat: no-repeat;
@@ -375,7 +395,7 @@ iframe {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;   
+      min-height: 90vh;   
     }
 
     section .index-wrapper {
@@ -425,7 +445,12 @@ iframe {
       font-size: 40px;
       letter-spacing: 2px;
       line-height: 1.35;
-      margin: 0;
+      margin: 0 0 40px 0;
+      padding-right: 4vw;
+    }
+
+    .pseudo-section:nth-of-type(3) h4 {
+      font-size: 48px;
     }
 
     section .index-wrapper div {
@@ -438,6 +463,7 @@ iframe {
       font-weight: 300;
       color: #90A3B4;
       letter-spacing: 1.1px; 
+      margin: 30px 0 50px 0;
     }
 
     .pseudo-section .index-wrapper p {
@@ -446,7 +472,8 @@ iframe {
       color: rgba(0,0,0, 1);
       letter-spacing: 0.6px; 
       flex-basis: 48%;
-      margin-top: 60px;
+      margin-top: 20px;
+      line-height: 1.4;
     }
 
     .pseudo-section:nth-of-type(2) {
@@ -458,7 +485,7 @@ iframe {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;   
+      min-height: 90vh;   
    
     }
 
@@ -476,7 +503,8 @@ iframe {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;   
+      min-height: 100vh;
+      margin-bottom: -5vh;   
     }
 
     section:nth-of-type(5) {
@@ -487,7 +515,7 @@ iframe {
     section:nth-of-type(5)  .down-link{
       color: black;
       display: block;
-      bottom: 90px;
+      bottom: 30px;
       position: relative;
     }
 
@@ -535,16 +563,17 @@ iframe {
     }
 
     section:last-of-type .half-page:first-of-type {
-      background-image: url("https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639572967/Travel_website_05_yu5lr4.jpg");
-      background-repeat: no-repeat;
-      background-size: cover;
+      background: radial-gradient(ellipse at left bottom, #414c63 0%, #242c3d 62%, #242c3d 100%);
       flex-direction: column;
-      overflow: scroll;
       display: flex;
       padding-top: 0px;
     }
 
     section:last-of-type .half-page div:first-of-type{
+      
+    }
+
+    .contact-logo {
       width: 50%;
       margin-bottom: 100px;
     }
@@ -827,6 +856,7 @@ iframe {
         min-height: 100vh;
         padding-top: 120px;
         padding-bottom: 60px;
+        margin-bottom: 0vh; 
       }
 
       .pseudo-section:nth-of-type(3) h4 {
