Update adam and peter

--- a/menu.css
+++ b/menu.css
@@ -88,7 +88,7 @@ header .menu-content {
   font-family: 'Caslon Doric';
   font-weight: 300;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 0;
   margin: 0 auto;
   position: relative;
@@ -214,5 +214,7 @@ header .menu-btn .closebtn img {
         justify-content: center;
       }
 
-
+      header .menu-content p {
+        display: none;
+      }
 }
