--- a/style.css
+++ b/style.css
@@ -736,10 +736,20 @@ section h1 {
       body {
         overflow-y:hidden;
       }
+
+      #myVideo {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-width: auto;
+        min-height: 100%;
+      }
       
       section h1 {
         font-size: 12vw;
-        padding-bottom: 12.7vw;
+        height: 100%;
+        padding-top: 11vw;
       }
 
       section:first-of-type {
@@ -748,7 +758,6 @@ section h1 {
       }
 
       section:nth-of-type(2) {
-       
       }
 
       .text {
@@ -770,11 +779,13 @@ section h1 {
         margin-bottom: 120px;
         margin-top: 10px;
         padding-right: 0;
+        justify-content: start;
       }
 
       .horizontal-scroll div {
         max-width: 100%;
         margin: 10px 30px 0 30px;
+        min-height: auto;
       }
       
       .horizontal-scroll p {
@@ -796,7 +807,6 @@ section h1 {
       }
 
       section:nth-of-type(4) {
-        
       }
 
       section:nth-of-type(5) {
@@ -805,7 +815,6 @@ section h1 {
         background-color: white;
         overflow-y: scroll;
         min-height: auto;
-
       }
 
       section:nth-of-type(5) .down-link{
@@ -870,7 +879,6 @@ section h1 {
 
       .pseudo-section:nth-of-type(3) h4 {
       font-size: 6.6vw;
-      
       }
 
       section:last-of-type .half-page:last-of-type {
@@ -883,6 +891,10 @@ section h1 {
 
       section:last-of-type .half-page div:first-of-type {
         display: none;
+      }
+
+      .pseudo-section {
+        padding: 0;
       }
 
 
@@ -900,6 +912,8 @@ section h1 {
       }  
       
     }
+
+    
     
     
     
