--- a/menu.css
+++ b/menu.css
@@ -79,10 +79,19 @@ header .menu-btn {
     /* transition: 0.5s; */
 }
 
+header .background-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 113%;
+  min-height: 105%;
+}
+
 header .menu-content {
   background-image: url("");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: fill;
   background-position: center;
   opacity: 100%;; 
   font-family: 'Caslon Doric';
@@ -132,7 +141,7 @@ position: relative;
   position: absolute;
   height: 100%;
   width: 100%;
-  opacity: 0.3;
+  opacity: 0.7;
 }
 
 header .menu-btn a {
