--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ section h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 113%;
-  max-height: 105%;
+  min-height: 105%;
   overflow: hidden;  
 }
 
@@ -114,7 +114,7 @@ section .background-image {
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 113%;
-  max-height: 105%;
+  min-height: 105%;
 }
 
 .opening-section {
@@ -155,6 +155,9 @@ section .background-image {
       opacity: 0;
       transition: opacity 1s;
       position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .mySlides1.active {
@@ -164,7 +167,7 @@ section .background-image {
     .mySlides1 img {
         min-height: 100vh;
         object-fit: cover;
-        object-position: 50% 00%;
+        min-width: 100vw;
     }
 
     .mySlides2 {
@@ -225,13 +228,14 @@ section .background-image {
       font-weight: 300;
       font-size: 20px;
       left: 30px;
-      position: sticky;
-      bottom: 60px;
+      position: absolute;
       width: 100%;
       text-align: left;
       padding-left: 60px;
-      padding-top: 15px;
-      line-height: 0.7
+      line-height: 0.7;
+      top: 50%;
+      bottom: 50%;
+      margin-top: 44vh;
     }
     
     /* Number text (1/3 etc)
@@ -375,6 +379,10 @@ section .background-image {
       font-size: 60px;
     }
     
+    Section:nth-of-type(4) {
+      overflow: hidden;
+    }
+
     Section:nth-of-type(4) div img{
       object-fit: cover;
       height: 100vh;
@@ -411,7 +419,7 @@ section .background-image {
   
 
     .scroll, .scroll-wrap {
-      height: 60px;
+      height: 100px;
       width: 100%;
       overflow-y: scroll;
       margin: 0;
@@ -421,10 +429,17 @@ section .background-image {
       
     }
 
-    /* .gradient-border {
-      height: 60px;
-      background: linear-gradient(rgba(0, 0, 255, 0), rgb(255, 0, 0));
-    } */
+    .gradient-border {
+      height: 100px;
+      background: linear-gradient(rgb(255, 255, 255), rgba(0, 0, 255, 0), rgb(255, 255, 255));
+      position: absolute;
+      width: 100%;
+      z-index: 60;
+    }
+
+    .scroll-container {
+      position: relative;
+    }
 
     .scroll::-webkit-scrollbar {
       display: none;
