--- a/slideshow-single.css
+++ b/slideshow-single.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: flex-end;
+    position: relative;
   }
   
   /* Hide the images by default */
@@ -123,20 +124,20 @@
     padding: 28px 36px 28px 12px;
     position: relative;
     bottom: 0px;
-    right: 20px;
+    right: 0px;
     font-family: 'caslon Doric';
     font-weight: 300;
     font-size: 16px;
     letter-spacing: 0.6px; 
     text-align: right;
-    width: 100%;
+    width: 100vw;
     background-color: black;
   }
 
   @media screen and (max-width: 600px) {
 
     .mySlides img {
-        min-height: 250px;   
+        max-height: 100vw;   
       }
 
     .mySlides1 img {
@@ -148,12 +149,14 @@
       }
 
       .numbertext {
-        bottom: 29px;
+        bottom: 35px;
         font-size: 12px;
+        background-color: rgba(0, 0, 0, 0);
+        padding: 0px 30px 0 0;
       }
   
       .prev, .next {
-        top: 105px;
+        height: 140%;
       }
 
 }
