--- a/slideshow-single.css
+++ b/slideshow-single.css
@@ -39,8 +39,15 @@
 
  .mySlides1 {
   opacity: 0;
-  transition: opacity 0.25s;
-  position: absolute;
+    transition: opacity 0.25s;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    align-items: top;
+    justify-content: right;
+    margin: 0 0 0 auto;
+    height: 48vw;
 }
 
 .mySlides1.active {
@@ -49,15 +56,25 @@
 
 
 .mySlides1 img {
-  min-height: 100vh;
-  object-fit: cover;
+  object-fit: contain;
   object-position: 50% 50%;
+  margin: 0 0 0 auto;
+  display: block;
+  max-height: 44vw;
 }
 
 .mySlides2 {
   opacity: 0;
   transition: opacity 0.25s;
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  align-items: top;
+  justify-content: right;
+  margin: 0 0 0 auto;
+  height: 48vw;
+  
 }
 
 .mySlides2.active {
@@ -66,9 +83,11 @@
 
 
 .mySlides2 img {
-  min-height: 100vh;
-  object-fit: cover;
+  object-fit: contain;
   object-position: 50% 50%;
+  margin: 0 0 0 auto;
+  display: block;
+  max-height: 44vw;
 }
 
   /* Next & previous buttons */
